err/heka-py-cef.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cef-0.5.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/heka'...
Compiling './lib/python3.5/site-packages/heka/client.py'...
***   File "./lib/python3.5/site-packages/heka/client.py", line 204
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/heka/decorators'...
Listing './lib/python3.5/site-packages/heka/streams'...
Listing './lib/python3.5/site-packages/heka/tests'...
Compiling './lib/python3.5/site-packages/heka/tests/sync_subscriber.py'...
***   File "./lib/python3.5/site-packages/heka/tests/sync_subscriber.py", line 42
    print 'Received %d updates' % nbr
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/heka/tests/test_hmac.py'...
***   File "./lib/python3.5/site-packages/heka/tests/test_hmac.py", line 40
    print "\n%s [%s]" % (name, hex)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/heka/tests/test_protobuf.py'...
***   File "./lib/python3.5/site-packages/heka/tests/test_protobuf.py", line 41
    print "\n\n\n"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/heka_cef'...
Listing './lib/python3.5/site-packages/heka_cef/tests'...
Compiling './lib/python3.5/site-packages/heka_cef/tests/ceftests.py'...
***   File "./lib/python3.5/site-packages/heka_cef/tests/ceftests.py", line 55
    except SyntaxError, se:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/heka_py-0.30.3.egg-info'...
Listing './lib/python3.5/site-packages/heka_py_cef-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
